Improve styles for controls

--- a/src/components/controls/Checkbox/switcher.module.scss
+++ b/src/components/controls/Checkbox/switcher.module.scss
@@ -1,12 +1,7 @@
 .switcher {
-  background: white;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  z-index: 2;
-  padding: 10px;
-  box-shadow: 1px 1px 5px black;
-
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
   .item {
     display: flex;
     gap: 5px;
