--- a/src/components/Overlay/overlay.module.scss
+++ b/src/components/Overlay/overlay.module.scss
@@ -2,12 +2,8 @@
   background: white;
   padding: 10px;
   box-shadow: 2px 2px 10px black;
-  width: 200px;
   border-radius: 5px;
-
-  .header {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
