--- a/src/components/FeaturesTable/table.module.scss
+++ b/src/components/FeaturesTable/table.module.scss
@@ -1,11 +1,20 @@
 .table {
   width: 100%;
   height: 50%;
+  padding: 10px;
 
-  overflow: scroll;
+  overflow: auto;
+
+  .placeholder {
+    background: white;
+    height: 100%;
+    font-size: 50px;
+    text-align: center;
+  }
 
   .main {
     font-size: 14px;
+    width: 100%;
 
     .head {
       .row {
