--- a/src/components/controls/Paginator/paginator.module.scss
+++ b/src/components/controls/Paginator/paginator.module.scss
@@ -1,9 +1,10 @@
 .paginator {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 5px;
 
   .input {
-    width: 40px;
+    width: 70px;
   }
 }
